apps/prod/spos/jaeger/basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: jaeger-basic-auth
  namespace: spos-prod
spec:
  basicAuth:
    secret: jaeger-basic-auth
